<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Book It!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="change_user_profile">Change user profile</string>
    <string name="settings">settings</string>
    <string name="events_created">Events Created</string>
    <string name="friends">Friends</string>
    <string name="returnback">returnback\n</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="change_username_text">Change Username</string>
    <string name="change_password_text">Change Password</string>
    <string name="change_email_text">Change Email</string>
    <string name="log_out">Log Out</string>
    <string name="name_of_event">Name of Event</string>
    <string name="date_of_event">Date of Event</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="notes">Notes</string>
    <string name="add_friends_to_event">Add Friends To Event</string>
    <string name="book_event">Book Event</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="_0_00">0:00</string>
    <string name="add_friend">Add Friend</string>
    <string name="create_event">Create Event</string>
    <string name="selected_date">Selected Date</string>
    <string name="home">Home</string>
    <string name="your_events">Your Events</string>
</resources>