<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:theme="@style/Theme.Scheduling"
    android:background="@color/my_primary"
    tools:context=".Register">

    <TextView
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider">

        <EditText
            android:id="@+id/name"
            android:hint="@string/fullname"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
        />
        


        <EditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:autofillHints="username"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"/>


        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"/>


        <EditText
            android:id="@+id/password"
            android:hint= "@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"/>


    </LinearLayout>




    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>