<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Scheduling"
        android:padding="15dp"
        tools:context=".CreateEvent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eventLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_event"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameofEvent"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:layout_marginBottom="333dp"
                android:autofillHints="Name Event"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:gravity="center"
                android:hint="@string/name_of_event"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/addFriendACTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/eventDate"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:gravity="center"
                android:text="@string/date_of_event"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameofEvent" />

            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="148dp"
                android:text="@string/selected_date"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/eventDate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="224dp"
                android:gravity="center"
                android:text="@string/_0_00"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/endTimeButton"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/startTimeButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:text="@string/select_start_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDate" />

            <Button
                android:id="@+id/endTimeButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:text="@string/select_end_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startTimeButton" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:text="@string/_0_00"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/notesField"
                app:layout_constraintTop_toBottomOf="@+id/startTime" />

            <EditText
                android:id="@+id/notesField"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:autofillHints="notes"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:gravity="center"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endTimeButton" />

            <!--        <Spinner-->
            <!--            android:id="@+id/addFriendEvent"-->
            <!--            android:layout_width="200dp"-->
            <!--            android:layout_height="50dp"-->
            <!--            android:layout_marginTop="28dp"-->
            <!--            android:background="@drawable/edit_text_rounded_corner"-->
            <!--            android:elevation="5dp"-->
            <!--            android:gravity="center"-->
            <!--            android:text="@string/add_friend"-->
            <!--            android:textColor="@color/black"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/notesField" />-->

            <MultiAutoCompleteTextView
                android:id="@+id/addFriendACTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="190dp"
                android:completionThreshold="1"
                android:hint="Add Friends"
                android:inputType="textMultiLine"
                android:maxLines="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameofEvent" />

            <Button
                android:id="@+id/bookeventButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:text="@string/book_event"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addFriendACTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>
